Cosmetic: stop .pophelp link hover flicker
git-svn-id: http://textpattern.googlecode.com/svn/development/4.0@1280 2fea6a4d-a838-0410-917b-93a53c48e9d2

--- a/textpattern/textpattern.css
+++ b/textpattern/textpattern.css
@@ -55,10 +55,8 @@ a.pophelp
 	padding: 0 2px 0 2px;
 }
 
-a.pophelp:hover,a.dlink:hover
-{
-	border: 0;
-	text-decoration: none;
+a.pophelp:hover, a.dlink:hover {
+text-decoration: none;
 }
 
 body
